# pycounts_ikhabi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_ikhabi/: __init__.py
tests/: test_pycounts_ikhabi.py
