[tool.poetry]
name = "pycounts_ikhabi"
version = "0.0.1"
description = "A toy package for Assignment 1"
authors = ["Sienko Ikhabi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
